booksky.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.navbar{
    background-color: rgb(0, 4, 255);
    padding: 10px ;
}

.container{
    margin: 10px;
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}
@media (max-width: 600px) {
    .container{
        justify-content: center;
    }
}
.book-container{
    background-color: black;
    color: white;
    max-width: 300px;
    border-radius: 10px;
    padding: 20px;
    margin: 30px;
}
/* .book-container{
    background-color: black;
    color: white;
    width: 100%;
    max-width: 300px;
    border-radius: 10px;
    padding: 20px;
} */

.book-container h2{
    color: rgb(0, 4, 255);

}
.book-container button{
    background-color: rgb(0, 4, 255);
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 10px;
    margin-top: 10px;
}

.add-button{
    position: fixed;
    bottom: 30px;
    right: 40px;
    background-color: rgb(0, 4, 255);
    color: white;
    border: none;
    font-size: 30px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 30px;
    padding-right: 30px;
    border-radius: 100%;
}

@media (max-width: 599px){
    .add-button{
        bottom: 20px;
        right: 20px;
        font-size: 22px;
        padding: 14px 20px;
    }
}

/* .overlay{
   width: 100%;
   height :100%;
   background-color: black;
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0.8;
    z-index: 1;
    display: none;
} */
.overlay{
    position: fixed;
    inset: 0;
    background-color: black;
    opacity: 0.8;
    z-index: 1;
    display: none;
}


.popup{
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    background-color: blue;
    z-index: 3;
    padding: 25px;
    border-radius: 10px;
    width: 90%;
    max-width: 400px;
    display: none;
    animation: popupZoom 0.3s ease-out;
}
@keyframes popupZoom {
    from{
        transform: translate(-50%,-50%) scale(0.7);
        /* opacity: 0; */
    }
    to{
        transform: translate(-50%,-50%) scale(1);
        /* opacity: 1; */
    }
    
}
/* .popup{
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: blue;
    z-index: 2;
    padding: 25px;
    border-radius: 10px;
    width: 90%;
    max-width: 400px;
    display: none;
    animation: popupZoom 0.3s ease-out;
} */

.popup input{
    width: 100%;
    background: transparent;
    outline: none;
    border: none;
    border-bottom: solid black 2px;
    padding: 5px;
    margin-top: 10px;
    font-size: 14px;
    color: white;
}
.popup textarea{
    width: 100%;
    background: transparent;
    outline: none;
    color: white;
    border: black 2px solid;
    padding: 5px;
    margin-top: 10px;
    font-size: 14px;
    margin-top: 10px;
}
.popup button{
    background-color: black;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-right: 20px;
    padding-left: 20px;
    color: white;
    margin-top: 10px;
    border: none;
}
.popup input::placeholder{
    color: white;
}
.popup textarea::placeholder{
    color: white;
}

